Load lighthouse images on button click

--- a/app/views/main/index.html.erb
+++ b/app/views/main/index.html.erb
@@ -1,2 +1,5 @@
 <h1>Lighthouse</h1>
 <p>Photos from around the world.</p>
+<button id='loadImages'>Load images</button>
+<div class='container'>
+</div>
