Style main page

--- a/app/views/main/index.html.erb
+++ b/app/views/main/index.html.erb
@@ -1,5 +1,16 @@
-<h1>Lighthouse</h1>
-<p>Photos from around the world.</p>
-<button id='loadImages'>Load images</button>
 <div class='container'>
+  <div class='row'>
+    <div class='col-xs-12 temp-layout'>
+      <h1>Lighthouse Lotto</h1>
+      <p class='lead'>Your one stop for lighthouse photos from around the world.</p>
+      <button id='loadImages' class='btn btn-primary'>Load photos!</button>
+    </div>
+  </div>
+
+  <div class='row'>
+    <div class='col-xs-12'>
+      <div id='lighthouseList' class='lighthouse-list'>
+      </div>
+    </div>
+  </div>
 </div>
