--- a/app/assets/stylesheets/main.scss
+++ b/app/assets/stylesheets/main.scss
@@ -11,8 +11,35 @@ body {
   margin-right: -1rem;
 }
 
-.lighthouse-list img {
+.item-wrapper {
+  position: relative;
+  display: inline-block;
   padding: 1rem;
-  height: 200px;
+
+  .glyphicon-info-sign {
+    position: absolute;
+    right: 20px;
+    top: 180px;
+    padding: 0;
+    width: 24px;
+    height: 24px;
+
+    border-radius: 50%;
+    color: #BBB;
+    background-color: #000;
+
+    &:hover {
+      text-decoration: none;
+    }
+  }
+
+  img {
+    display: block;
+    height: 200px;
+
+    border: 1px solid #161616;
+  }
+
 }
+
 
