Disable load image button while fetching images from flickr

--- a/app/views/main/index.html.erb
+++ b/app/views/main/index.html.erb
@@ -3,7 +3,7 @@
     <div class='col-xs-12 temp-layout'>
       <h1>Lighthouse Lotto</h1>
       <p class='lead'>Your one stop for lighthouse photos from around the world.</p>
-      <button id='loadImages' class='btn btn-primary'>Load photos!</button>
+      <button id='loadImages' class='btn btn-primary' data-loading-text='Loading...'>Load photos!</button>
     </div>
   </div>
 
