Make home page writing concise

--- a/app/views/main/index.html.erb
+++ b/app/views/main/index.html.erb
@@ -2,8 +2,8 @@
   <div class='row'>
     <div class='col-xs-12 temp-layout'>
       <h1>Lighthouse Lotto</h1>
-      <p class='lead'>Your one stop for lighthouse photos from around the world.</p>
-      <button id='loadImages' class='btn btn-primary' data-loading-text='Loading...'>Load photos!</button>
+      <p class='lead'>Your one stop for lighthouse photos.</p>
+      <button id='loadImages' class='btn btn-primary'>Get photos!</button>
     </div>
   </div>
 
